argocd-test-multi-cluster-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-test-ingress-ignoredifferences
