argocd-test-multi-cluster-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-test-multi-cluster-ingress
spec:
  rules:
    - host: argocd-test-multi-cluster-ingress.dev.hcpapps.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
